# bash-git-status

./: Cargo.toml
src/: main.rs
