[package]
name = "bash-git-status"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gix = {version = "0.72", default-features = false, features = ["max-performance-safe", "revision"] }
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
rustix = { version = "1", features = ["process"] }
